# termsurf

./: .gitignore  .gitmodules  .swiftlint.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  TODO.md  build.zig  build.zig.zon
.claude/skills/: release.md
.claude/skills/git-poet/: SKILL.md
.claude/skills/merge-upstream/: SKILL.md
.claude/skills/release/: SKILL.md
.github/workflows/: bindings-changed.yml  get-latest.yml  release-plz.yml  rust.yml  update-bindings.yml  update-linux.yml  update-macos.yml  update-windows.yml
cef/: CHANGELOG.md  Cargo.toml
cef-rs/: .gitignore
cef-rs/cef/src/osr_texture_import/: common.rs  iosurface.rs
cef-rs/examples/osr/: Cargo.toml
cef-rs/examples/osr/src/: main.rs  webrender.rs
cef/examples/: bundle_cefsimple.rs  demo.rs  demo_helper.rs
cef/examples/cefsimple/: bundle_script.rs  main.rs
cef/examples/cefsimple/mac/: helper.rs
cef/examples/osr/: Cargo.toml
cef/examples/osr/src/: main.rs  webrender.rs
cef/src/: application_mac.rs  args.rs  lib.rs  library_loader.rs  rc.rs  sandbox.rs  sandbox_info.rs  string.rs
cef/src/bindings/: aarch64_apple_darwin.rs  aarch64_pc_windows_msvc.rs  aarch64_unknown_linux_gnu.rs  arm_unknown_linux_gnueabi.rs  i686_pc_windows_msvc.rs  i686_unknown_linux_gnu.rs  x86_64_apple_darwin.rs  x86_64_pc_windows_msvc.rs  x86_64_unknown_linux_gnu.rs
cef/src/build_util/: linux.rs
cef/src/build_util/win/: mod.rs
cef/src/osr_texture_import/: common.rs  d3d11.rs  dmabuf.rs  iosurface.rs  mod.rs  shared_texture_handle.rs
docs/: architecture.md  bookmarks.md  build.md  cef-mvp-test-plan.md  cef-mvp2.md  cef-rs.md  cef-wezterm.md  cef.md  competitors.md  console.md  issues.md  keybindings.md  libghostty.md  merge-upstream.md  release.md  target-blank.md  termsurf2-wezterm-analysis.md  termsurf2.md  website.md  webview.md  wkwebview-api-audit.md  wkwebview.md
download-cef/: CHANGELOG.md  Cargo.toml
download-cef/src/: lib.rs
examples/cefsimple/: Cargo.toml
examples/cefsimple/src/: main.rs
examples/cefsimple/src/mac/: bundle_cefsimple.rs  helper.rs
examples/cefsimple/src/shared/: mod.rs
examples/osr/: Cargo.toml
examples/osr/src/: main.rs  webrender.rs
examples/osr/src/texture_import/: common.rs  d3d11.rs  dmabuf.rs  iosurface.rs  mod.rs  shared_texture_handle.rs
examples/tests_shared/src/browser/: client_app_browser.rs  main_message_loop.rs  main_message_loop_std.rs  util_win.rs
examples/tests_shared/src/common/: client_app.rs
examples/tests_shared/src/renderer/: client_app_renderer.rs
export-cef-dir/: CHANGELOG.md  Cargo.toml  build.rs
export-cef-dir/src/: main.rs
get-latest/: Cargo.toml  cliff.toml
get-latest/src/: main.rs
html/: test-dialogs.html  test-download.html  test-upload.html
include/: ghostty.h
scripts/: build-debug.sh  build-release.sh  generate-icons.sh  setup-cef.sh
src/cli/: action.zig  ghostty.zig  web.zig
src/config/: CApi.zig  Config.zig
src/termsurf-cli/: main.zig
sys/: CHANGELOG.md  Cargo.toml  build.rs  wrapper.h
sys/src/: lib.rs
sys/src/bindings/: aarch64_apple_darwin.rs  aarch64_pc_windows_msvc.rs  aarch64_unknown_linux_gnu.rs  arm_unknown_linux_gnueabi.rs  i686_pc_windows_msvc.rs  x86_64_apple_darwin.rs  x86_64_pc_windows_msvc.rs  x86_64_unknown_linux_gnu.rs
termsurf-macos/: README.md  TODO.md
termsurf-macos/CEFKit/: CEFApp.swift  CEFBrowser.swift  CEFClient.swift  CEFDisplayHandler.swift  CEFLifeSpanHandler.swift  CEFRequestContext.swift  CEFSettings.swift
termsurf-macos/CEFKit/Core/: CEFBase.swift  CEFCallback.swift  CEFString.swift
termsurf-macos/CEFKit/Modules/CEF/: CEF.h  module.modulemap
termsurf-macos/Ghostty.xcodeproj/: project.pbxproj
termsurf-macos/Sources/App/iOS/: iOSApp.swift
termsurf-macos/Sources/App/macOS/: AppDelegate+Ghostty.swift  AppDelegate.swift  MainMenu.xib  main.swift
termsurf-macos/Sources/Features/About/: AboutController.swift  AboutView.swift
termsurf-macos/Sources/Features/App Intents/: CloseTerminalIntent.swift  CommandPaletteIntent.swift  FocusTerminalIntent.swift  (+6 more)
termsurf-macos/Sources/Ghostty/: Ghostty.Action.swift  Ghostty.App.swift  Ghostty.Command.swift  Ghostty.Config.swift  Ghostty.Error.swift  Ghostty.Input.swift  Ghostty.Shell.swift  Ghostty.Surface.swift  GhosttyDelegate.swift  NSEvent+Extension.swift  Package.swift
termsurf-macos/Sources/Helpers/: AnySortKey.swift  Backport.swift  CodableBridge.swift  CrossKit.swift  Cursor.swift  DraggableWindowView.swift  Fullscreen.swift  NonDraggableHostingView.swift  PermissionRequest.swift  Weak.swift
termsurf-macos/TermSurf.xcodeproj/: project.pbxproj
termsurf-macos/WebViewTest/: main.swift
termsurf-macos/WebViewTest.xcodeproj/: project.pbxproj
termsurf-macos/docs/: ARCHITECTURE.md  ROADMAP.md
termsurf-macos/scripts/: generate-icons.sh
ts1/: LICENSE  README.md  build.zig.zon
ts1/scripts/: build-release.sh
ts1/src/cli/: web.zig
ts1/termsurf-macos/TermSurf.xcodeproj/: project.pbxproj
ts1/termsurf-macos/WebViewTest/: AppDelegate.swift  Info.plist  WebViewController.swift
ts2/: Cargo.toml
ts2/ci/: deploy.sh
ts2/codec/src/: lib.rs
ts2/docs/: cef-plan.md  cef-wezterm.md
ts2/mux/src/: lib.rs
ts2/scripts/: build-debug.sh  build-release.sh  bundle-cef.sh
ts2/wezterm-client/src/: client.rs
ts2/wezterm-dynamic/: Cargo.toml
ts2/wezterm-escape-parser/: Cargo.toml
ts2/wezterm-gui/: Cargo.toml  build.rs
ts2/wezterm-gui/src/: cef_integration.rs  cef_shader.wgsl  frontend.rs  main.rs
ts2/wezterm-mux-server-impl/src/: dispatch.rs  sessionhandler.rs
ts2/window/src/: lib.rs  spawn.rs
update-bindings/: Cargo.toml
update-bindings/src/: main.rs  parse_tree.rs  upgrade.rs
website/: fly.toml  index.html  package.json  server.tsx  tsconfig.json  vite.config.ts
website/data/: commits.json  version.json
website/scripts/: build-commits.ts  build-version.ts  resize-logo.ts
website/src/: client.tsx  globals.css  routeTree.gen.ts
website/src/components/: CommitLog.tsx  Footer.tsx  Header.tsx
website/src/routes/: __root.tsx  index.tsx  test-download.tsx  test-media.tsx
(+156 files in other folders)
