[workspace]
resolver = "2"

members = [
    "download-cef",
    "update-bindings",
    "sys",
    "cef",
]

[workspace.package]
version = "131.3.4"
edition = "2021"
license = "Apache-2.0 OR MIT"
authors = [
    "Wu Yu Wei <yuweiwu@pm.me>",
    "Bill Avery <wravery@gmail.com>",
    "csmoe <csmoe@msn.com>",
]
repository = "https://github.com/tauri-apps/cef-rs"

[workspace.dependencies]
cef-dll-sys = { version = "131.3.4", path = "sys" }
download-cef = { version = "1.1", path = "download-cef" }

anyhow = "1.0"
bindgen = "0.71"
clap = { version = "4.5", features = ["derive"] }
cmake = "0.1"
convert_case = "0.7"
proc-macro2 = "1.0"
quote = "1.0"
regex = "1.0"
serde = { version = "1.0", features = ["derive"] }
syn = { version = "2.0", features = ["full"] }
thiserror = "2.0"

[workspace.dependencies.windows-sys]
version = "0.59"
features = [
    "Win32_System_Environment",
    "Win32_System_LibraryLoader",
]
