[workspace]
resolver = "2"

members = [
    "download-cef",
    "get-latest",
    "update-bindings",
    "export-cef-dir",
    "sys",
    "cef",
]

[workspace.package]
version = "138.6.1+138.0.27"
edition = "2021"
license = "Apache-2.0 OR MIT"
authors = [
    "Wu Yu Wei <yuweiwu@pm.me>",
    "Bill Avery <wravery@gmail.com>",
    "csmoe <csmoe@msn.com>",
]
repository = "https://github.com/tauri-apps/cef-rs"

[workspace.dependencies]
cef-dll-sys = { version = "138.6.1", path = "sys" }
download-cef = { version = "2.0", path = "download-cef" }

anyhow = "1"
bindgen = "0.72"
clap = { version = "4", features = ["derive"] }
cmake = "0.1.52"
convert_case = "0.8"
git-cliff = "2"
git-cliff-core = "2"
plist = "1"
proc-macro2 = "1"
quote = "1"
regex = "1"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = { version = "2", features = ["full"] }
thiserror = "2"
toml_edit = "0.23"

[workspace.dependencies.windows-sys]
version = "0.60"
features = ["Win32_System_Environment", "Win32_System_LibraryLoader"]
