[workspace]
resolver = "2"

members = [
    "download-cef",
    "get-latest",
    "update-bindings",
    "export-cef-dir",
    "sys",
    "cef",
    "examples/*",
]

[workspace.package]
version = "142.2.1+142.0.10"
edition = "2021"
license = "Apache-2.0 OR MIT"
authors = [
    "Wu Yu Wei <yuweiwu@pm.me>",
    "Bill Avery <wravery@gmail.com>",
    "csmoe <csmoe@msn.com>",
]
repository = "https://github.com/tauri-apps/cef-rs"

[workspace.dependencies]
cef = { path = "cef" }
cef-dll-sys = { version = "142.2.1", path = "sys" }
download-cef = { version = "2.2", path = "download-cef" }

anyhow = "1"
ash = "0.38"
bindgen = "0.72"
clap = { version = "4", features = ["derive"] }
cmake = "0.1.52"
convert_case = "0.9"
git-cliff = "2"
git-cliff-core = "2"
io-surface = "0.16"
libc = "0.2"
libloading = "0.9"
metal = "0.32"
objc = "0.2"
objc2 = "0.6.3"
objc2-app-kit = { version = "0.3.2", default-features = false }
objc2-io-surface = "0.3"
plist = "1"
proc-macro2 = "1"
quote = "1"
regex = "1"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = { version = "2", features = ["full"] }
thiserror = "2"
toml_edit = "0.23"
tracing = "0.1"
wgpu = "27"

[workspace.dependencies.windows-sys]
version = "0.61"
features = ["Win32_System_Environment", "Win32_System_LibraryLoader"]

[workspace.dependencies.windows]
version = "0.58"
features = ["Win32_Graphics_Direct3D12"]
