[package]
name = "cef"
description = "Use cef in Rust"

version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = ["sandbox"]
dox = ["cef-dll-sys/dox"]
sandbox = ["cef-dll-sys/sandbox"]

[package.metadata.docs.rs]
features = ["dox"]

[dependencies]
cef-dll-sys.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
libloading = "0.8"
