[package]
name = "cef"
description = "Use cef in Rust"

version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = ["sandbox"]
dox = ["cef-dll-sys/dox"]
sandbox = ["cef-dll-sys/sandbox"]
# Unified texture import system for CEF hardware acceleration
accelerated_osr = ["wgpu", "windows", "libc", "ash", "tracing", "thiserror", "objc2-io-surface", "objc2-metal", "core-foundation" ]

[package.metadata.docs.rs]
features = ["dox"]

[dependencies]
cef-dll-sys.workspace = true

# accelerated_osr
ash = { version = "0.38", optional = true }
thiserror = { version = "2.0", optional = true }
tracing = { version = "0.1", optional = true }
wgpu = { workspace = true, optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys.workspace = true
windows = { workspace = true, optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
libloading = "0.8"
objc2-io-surface = { version = "0.3", optional = true }
objc2-metal = { version = "0.3", optional = true }
core-foundation = { version = "0.9", optional = true }


[target.'cfg(target_os = "linux")'.dependencies]
libc = { version = "0.2", optional = true }