[package]
name = "cef"
description = "Use cef in Rust"

version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = ["sandbox"]
dox = ["cef-dll-sys/dox"]
sandbox = ["cef-dll-sys/sandbox"]
# Unified texture import system for CEF hardware acceleration
accelerated_osr = [
    "wgpu",
    "windows",
    "libc",
    "ash",
    "tracing",
    "thiserror",
    "objc2-io-surface",
    "objc",
    "metal"
]

[package.metadata.docs.rs]
features = ["dox"]

[dependencies]
cef-dll-sys.workspace = true

# accelerated_osr
ash = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
wgpu = { workspace = true, optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys.workspace = true
windows = { workspace = true, optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
libloading.workspace = true
objc2-io-surface = { workspace = true, optional = true }
objc = { workspace = true, optional = true }
metal = { workspace = true, optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc = { workspace = true, optional = true }
