[package]
name = "download-cef"
description = "Download and extract pre-built CEF (Chromium Embedded Framework) archives."
version = "1.1.0"

edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true

bzip2 = "0.5"
indicatif = "0.17"
sha1_smol = "1.0"
tar = "0.4"
ureq = { version = "3.0", features = [ "json" ] }
