[package]
name = "update-bindings"
publish = false

version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
bindgen = "0.71"
bzip2 = "0.5"
clap = { version = "4.5", features = [ "derive" ] }
convert_case = "0.7"
indicatif = "0.17"
proc-macro2 = "1.0"
quote = "1.0"
regex = "1.0"
serde_json = "1.0"
sha1_smol = "1"
syn = { version = "2.0", features = [ "full" ] }
tar = "0.4"
thiserror = "2.0"
ureq = { version = "2.12", features = [ "json" ] }
