[package]
name = "update-bindings"
publish = false

version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
download-cef.workspace = true
thiserror.workspace = true

bindgen = "0.71"
clap = { version = "4.5", features = [ "derive" ] }
convert_case = "0.7"
proc-macro2 = "1.0"
quote = "1.0"
regex = "1.0"
syn = { version = "2.0", features = [ "full" ] }
