[package]
name = "cef-osr"
edition = "2024"
publish = false

[dependencies]
cef.workspace = true
cef-dll-sys.workspace = true

env_logger = "0.11"
pollster = "0.4"
wgpu = "25"
tokio = { version = "1", features = ["full"] }
winit = { version = "0.30" }
bytemuck = "1"

# Hardware acceleration dependencies
ash = { version = "0.38" }
thiserror = "2.0"
tracing = "0.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_Graphics_Direct3D12"] }
# For gpu debugging on Windows with PIX
libloading = "0.8"

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.31"
objc = "0.2"
io-surface = "0.16"

[target.'cfg(target_os = "linux")'.dependencies]
libc = { version = "0.2" }