[package]
name = "cef-osr"
edition = "2024"
publish = false

[dependencies]
env_logger = "0.11"
pollster = "0.4"
wgpu = "25"
tokio = { version = "1", features = ["full"] }
cef = { path = "../../" }
winit = { version = "0.30" }
windows = { version = "0.58", features = ["Win32_Graphics_Direct3D12"] }
bytemuck = "*"

# For gpu debugging on Windows with PIX
libloading = "0.8"
